# leash

./: CLAUDE.md  README.md  presentation.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/leash/: __init__.py  __main__.py  app.py  config.py  exceptions.py  session_start_hook.py
src/leash/handlers/: __init__.py
src/leash/middleware/: __init__.py
src/leash/models/: __init__.py  adaptive_threshold.py  configuration.py  handler_config.py  hook_input.py  hook_output.py  insight.py  llm_response.py  permission_profile.py  session_data.py  tray_models.py
src/leash/routes/: __init__.py  _tray_helpers.py  claude_hook.py  claude_logs.py  config.py  copilot_hook.py  dashboard.py  debug.py  health.py  hooks.py  logs.py  prompts.py  terminal.py
src/leash/security/: __init__.py  input_sanitizer.py
src/leash/services/: __init__.py  acp_client_base.py  anthropic_api_client.py  claude_cli_client.py  cli_process_runner.py  console_status_service.py  copilot_cli_client.py  copilot_hook_installer.py  generic_rest_client.py  hook_handler_factory.py  hook_installer.py  llm_client_base.py  llm_client_provider.py  persistent_claude_client.py  prompt_builder.py  (+7 more)
static/: claude-settings.html  config.html  copilot-settings.html  index.html  logs.html  prompts.html  transcripts.html
static/css/: styles.css
static/js/: config.js  dashboard.js  logs.js  shared.js
tests/: conftest.py  test_console_status_service.py  test_hook_decision_persistence.py  test_llm_providers.py  test_models.py  test_persistent_claude_stream.py  test_session_start_hook_feature.py
(+8 files in other folders)
